Switch from OpenAI to Google Gemini API and add deployment files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 langchain-community
-langchain-openai
+langchain-google-genai
 langchain-core
 python-dotenv
 pandas
 langchain-experimental
 gradio
 numpy==1.23.5
+google-generativeai
