--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ langchain-community
 langchain-google-genai
 langchain-core
 python-dotenv
-pandas
+pandas>=2.0.0
 langchain-experimental
 gradio
-numpy==1.23.5
+numpy>=1.24.0
 google-generativeai
 langsmith
